Updating dark mode, Updating styling for settings, Fixing meta tags, Updating hotspots,  Updating README, Adding copy url button

--- a/assets/scss/dark-mode.scss
+++ b/assets/scss/dark-mode.scss
@@ -151,7 +151,7 @@ html {
       color: $dark-mode-color;
     }
 
-    .dropdown-item.is-hovered {
+    a.dropdown-item:hover {
       background-color: $dark-mode-dropdown-hovered-background;
       color: $dark-mode-color;
     }
